@@ -1,3 +1,3 @@
-package ifneeded platform        1.0.9 [list source [file join $dir platform.tcl]]
+package ifneeded platform        1.0.10 [list source [file join $dir platform.tcl]]
 package ifneeded platform::shell 1.1.4 [list source [file join $dir shell.tcl]]
 
